Fix sidebar spacing

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -13,7 +13,7 @@
   padding-bottom: 8px;
 
   .mvc-subtitle {
-    padding: 4px 16px 16px 16px;
+    padding: 8px 16px;
   }
 
   &.expanded {
